v4.15 ??? ??? 2013
  - Added the call_super_init argument to the %Module directive to specify that
    classes should support cooperative multi-inheritance.
  - Added the %FinalisationCode directive.
  - Bug fixes.

v4.14.7 16th June 2013
  - The internal API version is increased to 10.0 requiring the regeneration of
    all modules.
  - Added the /Sequence/ function annotation.
  - %ConvertFromTypeCode can now be specified for classes.
  - Added sipEnableAutoconversion() to the C API.
  - Added sipSetDestroyOnExit() to the C API.
  - Bug fixes.

v4.14.6 21st April 2013
  - Bug fixes.

v4.14.5 26th March 2013
  - Bug fixes (specifically for QGIS).

v4.14.4 1st March 2013
  - The handwritten code provided to the %VirtualErrorHandler directive is now
    called with the GIL held and from the thread that raised the error.  This
    is, potentially, an incompatible change.
  - Bug fixes.

v4.14.3 28th January 2013
  - The /KeepReference/ argument annotation, when applied to factories, will
    now keep the reference with the object created by the factory.
  - Any object that supports the buffer protocol can now be passed when a
    sip.voidptr is expected.
  - Bug fixes.

v4.14.2 8th December 2012
  - Added sip.setdestroyonexit().
  - sip.voidptr() will now accept any object that implements the buffer
    protocol.
  - Bug fixes.

v4.14.1 27th October 2012
  - SIP_PYBUFFER can now be used to define objects that implement the Python
    buffer protocol.
  - Added /Capsule/ typedef annotation.
  - Added the 'z' format character to sipBuildResult().
  - Added the 'z', '!' and '$' format characters to sipParseResult().
  - The C prototype foo(void) is now accepted.
  - sipdistutils.py will now include swig_opts if no sip_opts have been
    defined.
  - Bug fixes.

v4.14 29th September 2012
  - The internal API version is increased to 9.0 requiring the regeneration of
    all modules.
  - Added the %InstanceCode directive.
  - Added the %VirtualErrorHandler directive.